<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact list</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Contact</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="add_contact">Add Contact</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="phone">Phone</string>
    <string name="birthdate">Birthdate</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="phone_error">Phone number must be at leat 8 digits</string>
    <string name="name_error">At least one of the names must be filled in</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_warning">Are you sure you want do delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="birth_sms">Birthday SMS</string>
    <string name="msg_txt">Message text</string>
    <string name="change_lang">Change language</string>
    <string name="save">Save</string>
    <string name="sms_warning">The following birthday text wil now be saved: </string>
    <string name="sms_warning2">It will be sent every day at: </string>
    <string name="sms_text_warning">You must write a birthday text</string>
    <string name="noti_title">Birthday messages</string>
    <string name="noti_text">Birthday messages has been sent!</string>
    <string name="sms_info">No SMSes has been sent today</string>
    <string name="info_text_sms">Birthday messages was sent to the following people:</string>
	<string name="new_lang">Language was set to English</string>
	<string name="close">Close</string>
	<string name="not_found">Could not find this contact. Aborting</string>
</resources>
