<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="no.yaff.s188902_mappe2.StartScreen" >
    
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/action_add"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:icon="@drawable/ic_lock_power_off"
        android:title="@string/close"
        android:showAsAction="always"/>

</menu>
