<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background">
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

   	<TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/change_lang" 
        android:labelFor="@+id/flagButton"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"/>
    
    <ImageButton
        android:id="@+id/flagButton"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:contentDescription="@string/change_lang"
        android:src="@drawable/flag"
        android:layout_gravity="center_horizontal" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/birth_sms" 
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"/>
    
    <EditText
         android:id="@+id/smsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textMultiLine" 
         android:layout_gravity="center_horizontal"
         android:textColor="#FFFFFF"
         android:hint="@string/msg_txt"
         android:textColorHint="#BBBBBB">
         <requestFocus />
     </EditText>
     
    <TimePicker
      	android:id="@+id/smsTimePicker"
        android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/saveButton"
       	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@+string/save" 
        android:layout_gravity="center_horizontal"/>
    
</LinearLayout>
</ScrollView>